# ShakTetrisClient

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  ShakTetrisClient.cpp  readme
Asset/Icon/: shaktris-icon.icns  shaktris-icon.xcf
Platform/SDL2/: CMakeLists.txt  Engine.cpp  ExecutableTypeSimple.cmake  Game.cpp  RenderWindow.cpp  TextureManager.cpp  entity.cpp
Platform/SDL2/Audio/: Audio.cpp  Audio.hpp  AudioManager.hpp
Platform/SDL2/Keyboard/: Keyboard.cpp  Keyboard.hpp
Platform/SDL2/Menus/: Menus.cpp  Menus.hpp
Platform/SDL2/Menus/MainMenu/: MainMenu.cpp  MainMenu.hpp
Platform/SDL2/Menus/MainMenu/Play/: Play.cpp  Play.hpp
Platform/SDL2/Menus/MainMenu/Selection/: Selection.cpp  Selection.hpp
Platform/SDL2/Menus/MainMenu/Settings/: Settings.cpp  Settings.hpp
Platform/SDL2/gameManager/: gameManager.cpp  gameManager.hpp
Platform/SDL2/headers/: Engine.hpp  Game.hpp  RenderWindow.hpp  TextureManager.hpp  entity.hpp
Platform/Util/: AddBinary.cmake
ShakTris/Input/: Input.cpp  Input.hpp
ShakTris/Plugins/: Plugin.cpp  Plugin.hpp  PluginManager.cpp  PluginManager.hpp
ShakTris/Plugins/ExternalPlugins/: plugin-helper.cmake
ShakTris/Plugins/ExternalPlugins/Tetris_example/: CMakeLists.txt  Tetris.hpp  damageTable.hpp  example.cpp  example.hpp  ppt.h
ShakTris/Plugins/ExternalPlugins/example/: CMakeLists.txt  PieceDefs.hpp  Tetris.hpp  combo_table.hpp  damageTable.hpp  example.cpp  example.hpp  ppt.cpp  ppt.h  rotation_constants.hpp
ShakTris/Plugins/ExternalPlugins/test/: CMakeLists.txt  test.cpp  test.hpp
ShakTris/Plugins/PluginHeaders/: PluginRegistry.cpp  PluginRegistry.hpp  Tetris.cpp  Tetris.hpp
